# keyworder

./: README.md  docker-compose.yml  pyproject.toml
db/: Dockerfile
db/docker-entrypoint-initdb.d/: keyworder.sql
src/crawler/: Dockerfile
src/crawler/crawler/: items.py  pipelines.py  settings.py
src/crawler/crawler/spiders/: as_spider.py  fn_spider.py  he_spider.py  hk_spider.py  se_spider.py
src/spikes/: count_keywords.py  crawl.py  read_mk.py  read_se.py
src/spikes/modules/: get_texts.py
